# financial-data-engineering

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: collect_earthquakes.py  collect_economic_indicators.py  multi_source_pipeline.py  validate_federal_awards.py  validate_sec_filings.py
src/extractors/: __init__.py  base_client.py  open_meteo.py  result.py  usgs.py  world_bank.py
src/pipeline/: __init__.py  orchestrator.py
src/quality/: __init__.py  report.py  rules.py  validator.py
src/transformers/: __init__.py  base_transformer.py  star_schema.py
tests/: conftest.py  test_base_client.py  test_clients.py  test_collector.py  test_rules.py  test_validator.py
