[project]
name = "financial-data-engineering"
version = "1.0.0"
description = "Production ETL pipelines processing 4.3M+ rows across 8 industries"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
